--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "husky": "^0.14.3",
     "jest": "^23.2.0",
     "jest-react-native": "^18.0.0",
-    "lint-staged": "^7.2.0",
     "prettier": "^1.13.6",
     "pretty-quick": "^1.6.0",
     "react-native-scripts-ts": "1.15.0",
@@ -26,12 +25,13 @@
     "typescript": "^2.8.3"
   },
   "scripts": {
-    "start": "react-native start",
+    "start": "react-native start --transformer node_modules/react-native-typescript-transformer/index.js",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "test": "jest",
     "prettier": "prettier --write *.tsx",
-    "precommit": "pretty-quick --staged, npm test"
+    "lint": "tslint -c tslint.json '*.tsx'",
+    "precommit": "pretty-quick --staged && npm test"
   },
   "jest": {
     "globals": {
