--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "jest",
     "prettier": "prettier --write *.tsx",
     "lint": "tslint -c tslint.json '*.tsx'",
-    "precommit": "pretty-quick --staged && npm test"
+    "precommit": "pretty-quick --staged && npm run lint && npm test"
   },
   "jest": {
     "globals": {
